# Repilot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CITATION.bib  CODE_OF_CONDUCT.md  Dockerfile  README-Artifact.md  README.md  calc_time.py  evaluate.py  fse23-data.tar.xz  generate_meta_config_in_docker.py  plot.py  pyproject.toml  reformat_result.py  requirements.txt  rq3_d4j1_considered_bugs.json  single-hunk-prefix-suffix.json
.github/workflows/: black.yml
data/: large.tar.xz
data/baseline-patch-correctness-results/: d4j1.2.csv  d4j2.0.csv
data/codet5-data-overlap/: d4j1.2.json  d4j2.0.json
data/considered-bugs/: d4j1.2-single-hunk.json  d4j2.0-single-hunk.json  d4j2.0-single-line.json
src/: absolute_to_relative.py  get_buggy_lines.sh  init.py  main.py  validate.py
src/Repair/: prompt.py  util.py
src/datasets/: README.md  bears.py  bugs_dot_jar.py  bugsinpy.py  check_duplicate.py  d4j.py  dataset.py  manybugs.csv  parse_codeflaws.py  parse_d4j.py  parse_manybugs.py  parse_quixbugs.py  process_dataset.py  utils.py  validate_codeflaws.py  validate_d4j.py  validate_manybugs.py  validate_quixbug.py  validate_quixbug_java.py
src/javalang/: tokenizer.py  util.py
src/realm/: analyze_result.py  analyzer.py  config.py  d4j.py  generation.py  generation_defs.py  jdt_lsp.py  lsp.py  model.py  ploting.py  repair.py  report.py  runner.py  syntax.py  template.py  utils.py  validate.py
src/rectify/: analyzer.py  d4j.py  evaluation.py  generation.py  generation_defs.py  model.py  repair.py  report.py  runner.py
src/repilot/: analyzer.py  codegen.py  d4j.py  (+6 more)
(+738 files in other folders)
